# havencore-satellite-firmware

./: .gitignore  .publish.env.example  CLAUDE.md  CMakeLists.txt  Makefile  README.md  nvs_config.example.csv  partitions.csv  plan.md  sdkconfig.defaults
components/bsp/src/boards/: esp32_bsp_board.c
components/havencore_client/: CMakeLists.txt  havencore_client.c
components/havencore_client/include/: havencore_client.h
components/havencore_ota/: CMakeLists.txt  havencore_ota.c
components/havencore_ota/include/: havencore_ota.h
components/microwakeword/: CMakeLists.txt  frontend_wrap.cc  idf_component.yml  manifest.c  microwakeword.c  microwakeword_internal.h  streaming_model.cc
components/microwakeword/include/: microwakeword.h
docs/: ARCHITECTURE.md  AUDIO.md  OTA.md  PROVISIONING.md  README.md  ROADMAP.md  SETTINGS.md
factory_nvs/: README.md  partitions.csv
factory_nvs/main/: Kconfig.projbuild  main.c
factory_nvs/main/ui/screens/: ui_ScreenSetup.c
main/: CMakeLists.txt  idf_component.yml  main.c
main/app/: app_audio.c  app_audio.h  app_sr.c  app_sr.h  app_ui_ctrl.c  app_ui_ctrl.h  app_ui_events.c  app_wifi.c  app_wifi.h  debug_overlay.c  debug_overlay.h  simple_vad.c  simple_vad.h  state.c  state.h  wake_word.c  wake_word.h
main/settings/: settings.c  settings.h
main/ui/: ui.c  ui.h  ui_events.h
main/ui/screens/: ui_ScreenSettings.c
model/: hey_selene_v1.json  hey_selene_v1.tflite
patches/: apply.sh  esp-box-3-scl_speed_hz.patch
scripts/: bootstrap_factory.sh  bootstrap_ota0.sh  bump_version.sh  publish_firmware.sh
spiffs/: README.md
